adicionei um paragrafo

--- a/Site/index.html
+++ b/Site/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hello, World</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Hello, World!</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam iste et qui mollitia ducimus vel explicabo aliquid! Deserunt velit asperiores corrupti sit libero incidunt rerum quas placeat labore, officiis officia.</p>
+    <hr>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae natus amet autem dolor, enim hic doloribus laboriosam, animi aliquam odio est similique cum debitis, temporibus quas accusamus consectetur aut eius.</p>
 </body>
 </html>
